Fix: squash last 15 commits
Fix: .header-nav__link:before animation

Fix: clearfix on header

Fix: move footer styles in css file

Fix: html font-size style

Fix: styles for * selector

Fix: bg animation for side-nav__link

Fix: wrap phone and email with a tag and add styles for it

Fix: tabs

Fix: tabs

Fix: fallback fonts

Fix: tr padding

Fix: box sizing for all elements

Fix: add h* tag for artircles

Fix: nav-link before scaleX

Fix: nav__link hover opacity

--- a/homeworks/ilya-ischenko/03-html-css/2.Cv/styles.css
+++ b/homeworks/ilya-ischenko/03-html-css/2.Cv/styles.css
@@ -2,21 +2,25 @@
 
 /* MAIN STYLES ===== */
 
-html {
-    font-size: 15px;
-}
-
 body {
     margin: 0;
     padding: 60px;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', sans-serif, Arial, Helvetica;
 }
 
-*,
+p,
+ul,
+ol,
+h1,h2,h3,h4,h5,h6,
+hr,
 ::after,
 ::before {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+
+* {
     box-sizing: border-box;
 }
 
@@ -102,9 +106,17 @@ body {
     width: 60%;
 }
 
+.info-table__link {
+    color: black;
+    text-decoration: none;
+}
+
+.info-table__link:hover {
+   text-decoration: underline;
+}
+
 .info-table tr {
     border-bottom: 1px solid black;
-    padding: 0 10px;
 }
 
 .aside-info__list {
